[tool.poetry]
name = "sandpiper"
version = "2.0.0"
description = "A Discord bot that makes it easier to communicate with friends around the world."
authors = ["Phanabani <phanabani@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17.0"
alembic = "^1.7.5"
certifi = "*"
"discord.py" = "^1.7"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
pytz = "*"
regex = "^2021.11.10"
semver = "^2.13.0"
SQLAlchemy = "^1.4.22"
tzlocal = "^4.1"
Pint = "^0.17"

[tool.poetry.dev-dependencies]
coverage = "^6.2"
ipython = "^7.30.1"
nest-asyncio = "^1.5.4"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-profiling = "^1.7.0"
yappi = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
