[tool.poetry]
name = "sandpiper"
version = "2.1.0"
description = "A Discord bot that makes it easier to communicate with friends around the world."
authors = ["Phanabani <phanabani@gmail.com>"]
repository = "https://github.com/Phanabani/sandpiper"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

aiosqlite = "^0.18.0"
alembic = "^1.7.5"
"discord.py" = "^2"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
phanas-pydantic-helpers = "^2.1.0"
Pint = "^0.20.1"
pydantic = "^1.10.2"
pytz = "*"
pyyaml = "^6.0"
regex = "2021.11.10"
semver = "^2.13.0"
SQLAlchemy = "^1.4.22"
tzlocal = "^4.1"

[tool.poetry.group.dev.dependencies]
coverage = "^6.2"
ipython = "^8.6.0"
nest-asyncio = "^1.5.4"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
pytest-profiling = "^1.7.0"
yappi = "^1.3.3"
ruff = "^0.0.244"
mypy = "^1.0.0"

[tool.ruff]
ignore = ["F403", "F405"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in packages
"**/commands/**/*.py" = ["F401"]  # Ignore unused imports in commands (needed for string casting)
"test_*.py" = ["F841"]  # Ignore unused variables in unit tests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
